--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 "discord.py" = "^2.3.2"
 black = "^23.12.0"
+openai = "^1.6.1"
+tiktoken = "^0.5.2"
+numpy = "^1.26.2"
 
 
 [build-system]
